--- a/estilo.css
+++ b/estilo.css
@@ -51,11 +51,11 @@ body {
   /*height: 200px;*/
 }
 
-.co-fixo {
+/*.co-fixo {
 
-/*criar fixando uma imagem*/
+criar fixando uma imagem
 }
-
+*/
 
 
 
